--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,21 +1,22 @@
-@import "../../style/colors.scss";
+@import '../../style/colors.scss';
 
 .sidebar-main {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: $purp;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $purp;
+  z-index: 1;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    padding: 10px;
-    height: 100%;
-    width: 75px;
+  padding: 10px;
+  height: 100%;
+  width: 75px;
+  box-sizing: border-box;
 }
 
 .icon-sidebar {
-    margin: 10px;
+  margin: 10px;
 }
